Fix blurred text on modal

--- a/src/style/Modal.css
+++ b/src/style/Modal.css
@@ -12,6 +12,7 @@ body.active-modal {
     right: 0;
     bottom: 0;
     position: fixed;
+
 }
 
 .overlay {
@@ -23,7 +24,7 @@ body.active-modal {
     position: absolute;
     top: 50%;
     left: 50%;
-    transform: translate(-50%, -50%);
+    transform: translate(round(nearest, -50%, 1px), round(nearest, -50%, 1px));
     line-height: 1.4;
     background: var(--clr-bg);
     padding: 20px;
